update desktop file and try suppressing warning from #207